# reginald

./: .gitignore  Cargo.toml  README.md  build-pkg.sh
.github/workflows/: pages.yml
reginald-lib/: Cargo.toml
reginald-lib/src/: lexer.rs  lib.rs  parser.rs  regex.rs
reginald-wasm/: Cargo.toml
reginald-wasm/src/: lib.rs
reginald-wasm/www/: index.html
reginald-wasm/www/css/: style.css
reginald-wasm/www/js/: index.js
src/: interpret.rs  lexer.rs  main.rs  parser.rs  regex.rs
