[package]
name = "reginald"
version = "0.1.0"
edition = "2021"
authors = ["Ella Pash"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ellabellla/reginald"
description = """
A very simple regular expression engine written in rust.   
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["reginald-lib", "reginald-wasm", "./"]

[dependencies]
reginald-lib = { path = "./reginald-lib" }
clap = { version = "3.0", features = ["derive"] }